--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,224 +1,13 @@
 
-<div class="card">
-  <div class="card-header">
-    <h2>Portfolio</h2>
-  </div>
-  <div class="card-body">
-
-      <div class="row">
-        <div class="col-md-4">
-          <%= link_to(image_tag("techelm.jpg", class: "img-fluid rounded grayscales"), "/assets/techelm.jpg") %>
-
-        </div>
-        <div class="col-md-8">
-          <h3>Techelm Project</h3>
-          <p>
-            One of the projects that I worked as a web developer from my previous company. It was created using the Yii2 advance.
-             I coordinated with a mobile team where I created the used for its mobile application.
-            API that I created are mostly retrieving list of records, update content and delete records. As a backend application there is no means to
-            check this web app for yourself.
-          </p>
-        </div>
-      </div>
-
-      <hr>
-      <div class="row">
-        <div class="col-md-4">
-          <%= link_to(image_tag("basic.jpg", class: "img-fluid rounded grayscales"), "/assets/basic.jpg") %>
-
-        </div>
-        <div class="col-md-8">
-          <h3>Archives Project</h3>
-          <p>
-            A personal project that I created for collecting all the animes that I have watch. It was created using Yii2 basic. EDR-Archives can save, update or
-            delete any saved data from the database. No Authentication though.
-            A new ruby on rails version of this is  available on this site, though shorter.
-
-          </p>
-          <%= link_to("Link to github", "https://github.com/Eumaser/EDR-Archives") %>
-          <%= link_to("Link to sample", "https://edrdemo.000webhostapp.com/EDR-Archives/web/index.php") %>
-
-        </div>
-      </div>
-
-      <hr>
-      <div class="row">
-        <div class="col-md-4">
-          <%= link_to(image_tag("jack.jpg", class: "img-fluid rounded grayscales"), "/assets/jack.jpg") %>
-
-        </div>
-        <div class="col-md-8">
-          <h3>JackFocus Project</h3>
-          <p>
-            A CMS project created using wordpress. I was tasked with adding a search functionality where users can filter records based on the filter input from the backend CRM. Since the backend CRM cannot be accessed by guest users,
-            this was created to allow guest to search anad inquire to the admin.
-          </p>
-          <%= link_to("Link to App", "http://jackfocus.com.sg/maids/")%>
-        </div>
-      </div>
-
-      <hr>
-      <div class="row">
-        <div class="col-md-4">
-          <%= link_to(image_tag("railsproj.png", class: "img-fluid rounded grayscales"), "/assets/railsproj.jpg") %>
-
-        </div>
-        <div class="col-md-8">
-          <h2>New Archives</h2>
-          <p>
-            One of my pet projects that I started to get a good underastanding of Ruby on Rails. It also a means to help me land a job as a rails developer
-            but this web application only containt basic skill application that I learned from reading tutorials online.There are other things that I applied
-            here, such as using SASS for designing this particular page and poking on ruby gems such as the will-paginate.
-            I also run into trouble, particularly with bootstrap gem that gives an error. So rather than fixing it, I opted to use the CDNs for it.
-
-          </p>
-        </div>
-      </div>
-
-
-  </div>
+<div class="introduction text-center">
+  <h1>Hello, <span style="color:#f42"> I'm Eumer Joseph Ramos </span> </h1>
+  <h2>I'm a Web Developer.</h2>
+  <h3>I learn.</h3>
+  <h4>I evolve.</h4>
 </div>
 
-<h1 class="text-center">About EDR</h1>
+<%= render "portfolio"%>
 
-<div class="row">
-  <div class="col-md-4">
-    <%= image_tag("profile.jpg", class:"img-fluid rounded grayscales")%>
-  </div>
-  <div class="col-md-8">
-    <p>
-      Eumer Joseph Ramos started as a software application developer and worked for 5 years before leaving the industry.
-      Later on, he started learning web development due to opportunity it gives in the industry and focused more on backend development with little experience on website designing.
-      Currently, he is seeking employment to further increase his knowledge and skills as a web developer.
-    </p>
-    <p>
-      He has taken an interest in learning other programming language. He is studying ruby and ruby on rails as a means to learn more
-      and be versatile in web development. As a result, this web application is the application of his knowledge regarding ruby on rails.
-      Another thing is learning is other php frameworks such as laravel and hanami.
-    </p>
-    <p>
-      Besides web development, Eumer prefers sleeping and playing video games as a hobby and to relieve his boredom and stress. He also prefer coffee over tea.
-    </p>
+<%= render "edr"%>
 
-  </div>
-</div>
-
-<div class="row">
-  <div class="col-sm-12 col-md-12">
-
-    <div class="card">
-        <div class="card-header">
-          <h2>HTML</h2>
-        </div>
-        <div class="card-body">
-          <div class="row">
-            <div class="col-md-2 text-center">
-              <%= image_tag("html5.png", class: "img-fluid")%>
-              <h6>HTML5</h6>
-            </div>
-          </div>
-        </div>
-    </div>
-
-
-    <div class="card">
-        <div class="card-header">
-          <h2>CSS</h2>
-        </div>
-        <div class="card-body">
-          <div class="row">
-            <div class="col-md-2 text-center">
-              <%= image_tag("html5.png", class: "img-fluid")%>
-              <h6>HTML5</h6>
-            </div>
-          </div>
-        </div>
-    </div>
-
-    <div class="card">
-        <div class="card-header">
-          <h2>Javascript</h2>
-        </div>
-        <div class="card-body">
-          <div class="row">
-            <div class="col-md-2 text-center">
-              <%= image_tag("html5.png", class: "img-fluid")%>
-              <h6>HTML5</h6>
-            </div>
-          </div>
-        </div>
-    </div>
-
-    <div class="card">
-        <div class="card-header">
-          <h2>Back-End</h2>
-        </div>
-        <div class="card-body">
-          <div class="row">
-            <div class="col-md-2 text-center">
-              <%= image_tag("html5.png", class: "img-fluid")%>
-              <h6>HTML5</h6>
-            </div>
-          </div>
-        </div>
-    </div>
-
-    <div class="card">
-        <div class="card-header">
-          <h2>CMS</h2>
-        </div>
-        <div class="card-body">
-          <div class="row">
-            <div class="col-md-2 text-center">
-              <%= image_tag("html5.png", class: "img-fluid")%>
-              <h6>HTML5</h6>
-            </div>
-          </div>
-        </div>
-    </div>
-
-    <div class="card">
-        <div class="card-header">
-          <h2>Others</h2>
-        </div>
-        <div class="card-body">
-          <div class="row">
-            <div class="col-md-2 text-center">
-              <%= image_tag("html5.png", class: "img-fluid")%>
-              <h6>HTML5</h6>
-            </div>
-          </div>
-        </div>
-    </div>
-
-
-  </div>
-</div>
-
-
-
-<div class="jumbotron jumbotron-fluid">
-  <div class="container">
-    <h1 class="display-4">Fluid jumbotron</h1>
-    <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
-  </div>
-</div>
-
-<div class="jumbotron jumbotron-fluid">
-  <div class="container">
-    <h1 class="display-4">To add</h1>
-    <p class="lead">
-      <ol>
-        <li>Search Function on animes, by name and by location</li>
-        <li>Sorting of anime tables??</li>
-        <li>Fontawesome icons</li>
-        <li>Breadcrumb if possible</li>
-        <li>design login, logout, signin and the navbar</li>
-        <li>design home page</li>
-        <li>add dummy contact form</li>
-        <li>Optional add image upload for each anime</li>
-        <li>Optional, once image added, changed the index displaying method Image->title</li>
-      </ol>
-    </p>
-  </div>
-</div>
+<%= render "skills"%>
