--- a/app/views/animes/index.html.erb
+++ b/app/views/animes/index.html.erb
@@ -1,5 +1,5 @@
-<h1>Animes#index</h1>
-<p>Find me in app/views/animes/index.html.erb</p>
+<h1>Anime</h1>
+
 
 <div class="card">
   <div class="card-header bg-dark text-white">
