--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
 
 
     <%= stylesheet_link_tag("https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css")%>
+    <%= stylesheet_link_tag("https://use.fontawesome.com/releases/v5.3.1/css/all.css")%>
     <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
     <%= javascript_include_tag("https://code.jquery.com/jquery-3.3.1.min.js","integrity"=>"sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=","crossorigin"=>"anonymous") %>
     <%= javascript_include_tag("https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js") %>
@@ -23,11 +24,7 @@
           <%=render 'layouts/alerts'%>
           <%= yield %>
       </div>
-
-    <footer>
-
-    </footer>
-
+    <%= render "layouts/footer"%>
   </body>
 
 </html>
