--- a/app/views/animes/show.html.erb
+++ b/app/views/animes/show.html.erb
@@ -1,4 +1,16 @@
 
+
+<p class="text-right">
+  <%= link_to("Back",animes_path, class: "btn btn-primary")%>
+  <%= link_to("Add",new_anime_path, class: "btn btn-primary")%>
+  <%= link_to("Edit",edit_anime_path, class: "btn btn-primary")%>
+  <%= link_to("Delete",anime_path, method: :delete,
+                                    data: {confirm: "Are you sure?"},
+                                    class: "btn btn-danger")%>
+</p>
+
+
+
 <div class="jumbotron">
   <h1>Title: <%=@anime.name %></h1>
   <p class="lead">Description: <%=@anime.description%></p>
