correct bg for heroku

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,7 +29,7 @@ $mobilescreen: 600px;
 
 body{
   font-family: $main_font;
-  background-image: url("mainbg.jpg");
+  background-image: image-url("mainbg.jpg");
   height: 100%;
 
 }
