linked image, used asset_path instead of default path

--- a/app/views/home/_portfolio.html.erb
+++ b/app/views/home/_portfolio.html.erb
@@ -6,8 +6,7 @@
 
       <div class="row">
         <div class="col-md-4">
-          <%= link_to(image_tag("techelm.jpg", class: "img-fluid rounded grayscales"), "/assets/techelm.jpg") %>
-
+          <%= link_to(image_tag("techelm.jpg", class: "img-fluid rounded grayscales"), asset_path("techelm.jpg") ) %>
         </div>
         <div class="col-md-8">
           <h3>Techelm Project</h3>
@@ -23,8 +22,7 @@
       <hr>
       <div class="row">
         <div class="col-md-4">
-          <%= link_to(image_tag("basic.jpg", class: "img-fluid rounded grayscales"), "/assets/basic.jpg") %>
-
+          <%= link_to(image_tag("basic.jpg", class: "img-fluid rounded grayscales"), asset_path("basic.jpg") )  %>
         </div>
         <div class="col-md-8">
           <h3>Archives Project</h3>
@@ -43,7 +41,7 @@
       <hr>
       <div class="row">
         <div class="col-md-4">
-          <%= link_to(image_tag("jack.jpg", class: "img-fluid rounded grayscales"), "/assets/jack.jpg") %>
+          <%= link_to(image_tag("jack.jpg", class: "img-fluid rounded grayscales"), asset_path("jack.jpg") ) %>
 
         </div>
         <div class="col-md-8">
@@ -59,7 +57,7 @@
       <hr>
       <div class="row">
         <div class="col-md-4">
-          <%= link_to(image_tag("railsproj.png", class: "img-fluid rounded grayscales"), "/assets/railsproj.jpg") %>
+          <%= link_to(image_tag("railsproj.png", class: "img-fluid rounded grayscales"), asset_path("railsproj.png") ) %>
 
         </div>
         <div class="col-md-8">
